Second commit: Updated styles and adjusted headings

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
 /* appling google font over the website  */
-body{
+/* === Global Layout Fix === */
+
+
+html, body{
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400;
+    width: auto;
     overflow-x: hidden;
+    border: none;
 }
+
+
 /* styling menu icon */
 .nav-menu{
     border: none;
@@ -19,6 +26,12 @@ body{
 .navbar-nav a:hover{
     color: #fca61f;
 }
+
+
+.contact-section-margin {
+  margin: 60px 20px; /* top/bottom: 60px, left/right: 20px */
+}
+
 .navbar-nav a:after {    
     background: none repeat scroll 0 0 transparent;
     bottom: 0;
@@ -403,3 +416,5 @@ footer .link-group a:hover{
     color: #fff;
     animation: pulse 3s infinite;
 }
+
+
